--- a/GestionUtilisateur-FrontEnd-master3/src/app/grade/grade.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/grade/grade.component.html
@@ -1,4 +1,4 @@
-
+<app-index></app-index>
 <div class="panel panel-primary">
   <div class="panel-heading">Ajouter Grade</div>
   <div class="panel-body">
@@ -16,7 +16,7 @@
     <div class="panel-heading">Afficher Grade</div>
     <div class="panel-body">
       <div class="form-group">
-        <label>Mot Clé</label>
+        <label>Titre</label>
         <input type="text" [(ngModel)]="motCle"/>
         <button class="btn btn-primary" (click)="doSearch()">Chercher</button>
       </div>
