--- a/GestionUtilisateur-FrontEnd-master3/src/app/corps/corps.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/corps/corps.component.html
@@ -1,3 +1,4 @@
+<app-index></app-index>
 <div class="panel panel-primary">
   <div class="panel-heading">Ajouter Corps</div>
   <div class="panel-body">
@@ -15,15 +16,15 @@
     <div class="panel-heading">Afficher Corps</div>
     <div class="panel-body">
       <div class="form-group">
-        <label>Mot Clé</label>
+        <label>Libélle</label>
         <input type="text" [(ngModel)]="motCle"/>
         <button class="btn btn-primary" (click)="doSearch()">Chercher</button>
       </div>
       <table class="table table-striped">
         <tr>
-          <th>ID</th><th>Nom</th><th>Modifier Corps</th><th>Supprimer Corps</th>
+          <th>ID</th><th>Libélle</th><th>Modifier Corps</th><th>Supprimer Corps</th>
         </tr>
-        <tr *ngFor="let c of corps">
+        <tr *ngFor="let c of corpss">
           <td>{{c.idcps}}</td>
           <td>{{c.libelle}}</td>
           <td><a (click)="onEditCorps(c.idcps)" class="clickable">Modifier</a> </td>
