--- a/GestionUtilisateur-FrontEnd-master3/src/app/edit-departement/edit-departement.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/edit-departement/edit-departement.component.html
@@ -1,3 +1,4 @@
+<app-index></app-index>
 <div class="panel panel-primary">
   <div class="panel-heading">Modifier Departement</div>
   <div class="panel-body">
