--- a/GestionUtilisateur-FrontEnd-master3/src/app/users/users.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/users/users.component.html
@@ -1,25 +1,25 @@
+<app-index></app-index>
 <div class="container spacer">
   <div class="panel panel-primary">
     <div class="panel-heading">Liste des utilisateurs</div>
   <div class="panel-body">
-  <label>Date de Creation:</label>
- <mat-form-field>
-      <input matInput [matDatepicker]="picker" placeholder="Date de Creation" [(ngModel)]="motCle">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
+    <mat-form-field>
+      <input matInput placeholder="Login"  [(ngModel)]="motCle">
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="chercher()">Chercher</button>
+    <button mat-icon-button (click)="chercherLogin()">
+      <mat-icon >search</mat-icon>
+      </button>
 <table class="table table-striped">
   <tr>
-    <th>Login</th><th>Mot de Passe</th><th>Date de Creation</th><th>Personnel</th><th>Modifier Utilisateur</th><th>Supprimer Utilisateur</th>
+    <th>Login</th><th>Mot de Passe</th><th>Date de Creation</th><th>Personnel</th><th>Modifier</th><th>Supprimer</th>
   </tr>
-  <tr *ngFor="let u of users">
+  <tr *ngFor="let u of pageUsers?.content">
     <td>{{u.login}}</td>
     <td>{{u.motpasse}}</td>
     <td>{{u.datecreation}}</td>
-    <td>{{u.personnel.prenom}}</td>
-    <td><a (click)="onEditUser(u.login)" class="clickable">Modifier</a> </td>
-    <td><a (click)="onDeleteUser(u)" class="clickable">Supprimer</a> </td>
+    <td>{{u.personnel.prenom+" "+u.personnel.nom }}</td>
+    <td><a (click)="onEditUser(u.login)" class="clickable"><mat-icon >create</mat-icon></a> </td>
+    <td><a (click)="onDeleteUser(u)" class="clickable"><mat-icon >delete</mat-icon></a> </td>
   </tr>
 
 </table>
