--- a/GestionUtilisateur-FrontEnd-master3/src/styles.css
+++ b/GestionUtilisateur-FrontEnd-master3/src/styles.css
@@ -15,3 +15,16 @@
   width:100%;
   height:100vh;
 }
+.example-fill-remaining-space {
+  /* This fills the remaining space, by using flexbox.
+     Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url('./assets/images/enseig.png');
+  background-size: cover;
+}
