--- a/GestionUtilisateur-FrontEnd-master3/src/app/consultation-conge/consultation-conge.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/consultation-conge/consultation-conge.component.html
@@ -5,7 +5,7 @@
   <div class="panel-body">
       <table class="table table-striped">
         <tr>
-          <th>Personnel</th><th>Date de début</th><th>Date de fin</th><th>Type de Congé</th><th align="center">Décision</th>
+          <th>Personnel</th><th>Date de début</th><th>Date de fin</th><th>Type de Congé</th><th align="center">Accepter</th><th align="center">Refuser</th>
         </tr>
         <tr *ngFor="let c of pageConge?.content">
           <td>{{c.personnel.prenom+" ben "+c.personnel.nompere+" "+c.personnel.nom}}</td>
@@ -13,8 +13,8 @@
           <td>{{c.dateFin}}</td>
           <td>{{c.typeconge.libelle}}</td>
           <!--<td>{{CalculerNbj(c)}}</td>-->
-          <td><button mat-raised-button (click)="accepter(c)">Accepter</button>
-          <button mat-raised-button color="warn" (click)="refuser(c)">Refuser</button> </td>
+          <td> <button mat-icon-button  (click)="accepter(c)" color="primary"><mat-icon>check_circle_outline</mat-icon></button></td>
+         <td> <button mat-icon-button color="warn" (click)="refuser(c)"><mat-icon>cancel</mat-icon></button></td>
         </tr>
       </table>
     <div class="container">
