--- a/GestionUtilisateur-FrontEnd-master3/src/app/index/index.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/index/index.component.html
@@ -37,6 +37,7 @@
   <mat-menu #conge="matMenu">
   <button mat-menu-item routerLink="/conge">Ajouter Conge</button>
   <button mat-menu-item routerLink="/consultationConge">Consulter Liste des demandes</button>
+  <button mat-menu-item routerLink="/historiqueConge">Consulter Historique</button>
 </mat-menu>
   <mat-menu #poste="matMenu">
     <button mat-menu-item routerLink="/posteAdmin">Ajouter Poste</button>
