--- a/GestionUtilisateur-FrontEnd-master3/src/app/new-user/new-user.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/new-user/new-user.component.html
@@ -11,7 +11,8 @@
         </div>
       <div class="form-group">
       <mat-form-field>
-        <input  matInput placeholder="Mot de Passe:"  type="password" [(ngModel)]="user.motpasse"/>
+        <input  matInput placeholder="Mot de Passe:"  [type]="hide ? 'password' : 'text'" [(ngModel)]="user.motpasse"/>
+        <mat-icon matSuffix class="clickable" (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
       </mat-form-field>
       </div>
       <div class="form-group">
