--- a/GestionUtilisateur-FrontEnd-master3/src/app/app.component.css
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/app.component.css
@@ -1,4 +1,4 @@
 .image{
-  height: 40em;background-size: cover;width: auto;background-image: url("/src/assets/images/bg.jpg");
+  height: 40em;background-size: cover;width: auto;background-image: url("/src/assets/images/bg1.jpg");
   background-position: 50% 50%;
 }
