--- a/GestionUtilisateur-FrontEnd-master3/src/app/historique-conge/historique-conge.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/historique-conge/historique-conge.component.html
@@ -21,7 +21,7 @@
     <td>{{c.dateDebut}}</td>
     <td>{{c.dateFin}}</td>
     <td>{{c.typeconge.libelle}} </td>
-    <td>{{c.typeconge.nbMaxJrs}}</td>
+    <td>{{c.nbJour}}</td>
     <td>{{c.valide}}</td>
   </tr></table>
     </div>
