--- a/GestionUtilisateur-FrontEnd-master3/src/app/edit-user/edit-user.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/edit-user/edit-user.component.html
@@ -12,7 +12,7 @@
         <div class="form-group">
           <mat-form-field>
             <input  matInput placeholder="Mot de Passe:"  [type]="hide ? 'password' : 'text'" [(ngModel)]="user.motpasse"/>
-            <mat-icon matSuffix class="clickable" (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+            <mat-icon matSuffix class="clickable" (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </mat-form-field>
         </div>
         <div class="form-group">
