--- a/GestionUtilisateur-FrontEnd-master3/src/app/liste-enseignant-permanent/liste-enseignant-permanent.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/liste-enseignant-permanent/liste-enseignant-permanent.component.html
@@ -3,11 +3,17 @@
 <div class="panel panel-primary">
   <div class="panel-heading">Afficher liste des enseignants</div>
   <div class="panel-body">
+    <mat-form-field>
+      <input matInput placeholder="Nom" [(ngModel)]="motCle">
+    </mat-form-field>
+    <button mat-icon-button (click)="doSearch()">
+      <mat-icon>search</mat-icon>
+    </button>
   <table class="table table-striped">
     <tr>
       <th>Matricule</th><th>CIN</th><th>Nom</th><th>Prenom</th><th>Telephone</th><th>E-mail</th><th>Departement</th><th>Modifier</th><th>Détails</th>
     </tr>
-    <tr *ngFor="let e of enseignantPs">
+    <tr *ngFor="let e of pageEnseignant?.content">
       <td>{{e.matricule}}</td>
       <td>{{e.cin}}</td>
       <td>{{e.nom}}</td>
@@ -18,6 +24,13 @@
       <td><a (click)="onEditEnseignant(e.matricule)" class="clickable"><mat-icon>create</mat-icon></a> </td>
       <td><a (click)="onDetailsEnseignant(e.matricule)" class="clickable"><mat-icon >list_alt</mat-icon></a> </td>
     </tr></table>
+    <div class="container">
+      <ul class="nav nav-pills">
+        <li [ngClass]="{'active' :i==currentPage}" *ngFor="let p of pages; let i=index">
+          <a class="clickable" (click)="gotopage(i)">{{i}}</a>
+        </li>
+      </ul>
+    </div>
 </div>
 </div>
 </div>
