--- a/GestionUtilisateur-FrontEnd-master3/src/app/new-user/new-user.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/new-user/new-user.component.html
@@ -3,27 +3,27 @@
   <div class="panel panel-primary">
   <div class="panel-heading">Nouveau Utilisateur</div>
   <div class="panel-body">
+    <div class="form-group">
+      <mat-form-field>
+        <mat-select placeholder="Choisir Personnel" [(value)]="personnel">
+          <mat-option *ngFor="let p of personnels" [value]="p">
+            {{p.prenom+"   "+ p.nom }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
     <div>
         <div class="form-group">
           <mat-form-field>
-        <input  matInput placeholder="Login" [(ngModel)]="user.login">
+        <input  matInput placeholder="Login" #login [(ngModel)]="user.login" [value]="concatination()" >
           </mat-form-field>
         </div>
       <div class="form-group">
       <mat-form-field>
-        <input  matInput placeholder="Mot de Passe:"  [type]="hide ? 'password' : 'text'" [(ngModel)]="user.motpasse"/>
-        <mat-icon matSuffix class="clickable" (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
+        <input  matInput placeholder="Mot de Passe:"  [value]="concatination()" [type]="hide ? 'password' : 'text'" #motpass [(ngModel)]="user.motpasse"/>
+        <mat-icon matSuffix class="clickable" (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
       </mat-form-field>
       </div>
-      <div class="form-group">
-        <mat-form-field>
-          <mat-select placeholder="Choisir Personnel" [(value)]="personnel">
-            <mat-option *ngFor="let p of personnels" [value]="p">
-              {{p.prenom+"   "+ p.nom }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-     </div>
       <button mat-raised-button color="primary" (click)="saveUser()">Enregistrer</button>
       <button mat-raised-button color="primary" (click)="annuler()">Annuler</button>
     </div>
