--- a/GestionUtilisateur-FrontEnd-master3/src/app/type-conge/type-conge.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/type-conge/type-conge.component.html
@@ -6,17 +6,16 @@
     <mat-form-field>
       <input matInput placeholder="libelle" [(ngModel)]="typeConge.libelle">
     </mat-form-field>
-
-    <mat-form-field>
-      <input matInput placeholder="Description" [(ngModel)]="typeConge.description">
-    </mat-form-field>
-
+    <br>
     <mat-form-field>
       <input matInput placeholder="Nombre de jours" [(ngModel)]="typeConge.nbMaxJrs">
-    </mat-form-field>
-
-    <button  mat-icon-button (click)="ajouter()">
-      <mat-icon>add_circle</mat-icon></button>
+    </mat-form-field><br>
+    <mat-radio-group [(ngModel)]="typeConge.autorisation" name="autorisation">
+      <mat-label>Autoriser</mat-label>
+      <mat-radio-button value="true">Oui</mat-radio-button>
+      <mat-radio-button value="false">Non</mat-radio-button>
+    </mat-radio-group><br>
+    <button  mat-raised-button color="primary" (click)="ajouter()">Ajouter</button>
   </div>
 </div>
   <div class="panel panel-default">
@@ -30,15 +29,22 @@
       </div>
       <table class="table table-striped">
         <tr>
-          <th>ID</th><th>Titre</th><th>Description</th><th>Nombre De Jours</th><th>Modifier</th><th>Supprimer</th>
+          <th>ID</th><th>Titre</th><th>Autorisation</th><th>Nombre De Jours</th><th>Modifier</th><th>Supprimer</th>
         </tr>
-        <tr *ngFor="let tc of typeConges">
+        <tr *ngFor="let tc of pageTypeConge?.content">
           <td>{{tc.idCg}}</td>
           <td>{{tc.libelle}}</td>
-          <td>{{tc.description}}</td>
+          <td>{{autoriser(tc.autorisation)}}</td>
           <td>{{tc.nbMaxJrs}}</td>
           <td><a (click)="onEditTypeConge(tc.idCg)" class="clickable"><mat-icon>create</mat-icon></a> </td>
-          <td><a (click)="onDeleteTypeConge(tc)" class="clickable"> <mat-icon color="#B00020">delete_sweep</mat-icon></a> </td>
+          <td><a (click)="onDeleteTypeConge(tc)" class="clickable"> <mat-icon>delete_sweep</mat-icon></a> </td>
         </tr></table>
+    <div class="container">
+      <ul class="nav nav-pills">
+        <li [ngClass]="{'active' :i==currentPage}" *ngFor="let p of pages; let i=index">
+          <a class="clickable" (click)="gotopage(i)">{{i}}</a>
+        </li>
+      </ul>
+    </div>
     </div>
   </div>
