--- a/GestionUtilisateur-FrontEnd-master3/src/app/type-mutation/type-mutation.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/type-mutation/type-mutation.component.html
@@ -7,7 +7,7 @@
       <form class="form-inline">
         <div class="form-group">
           <mat-form-field>
-            <input matInput placeholder="Désignation" [(ngModel)]="typeMutation.designation">
+            <input matInput placeholder="Désignation" [(ngModel)]="typeMutation.designation" name="desig">
           </mat-form-field>
           <button  mat-icon-button (click)="ajouter()">
             <mat-icon>add_circle</mat-icon></button>
@@ -29,11 +29,18 @@
         <tr>
           <th>ID</th><th>Titre</th><th>Modifier</th><th>Supprimer</th>
         </tr>
-        <tr *ngFor="let tm of typeMutations">
+        <tr *ngFor="let tm of pageTypeMutation?.content">
           <td>{{tm.code}}</td>
           <td>{{tm.designation}}</td>
           <td><a (click)="onEditTypeMutation(tm.code)" class="clickable"> <mat-icon>create</mat-icon></a> </td>
-          <td><a (click)="onDeleteTypeMutation(tm)" class="clickable"> <mat-icon color="#B00020">delete_sweep</mat-icon></a> </td>
+          <td><a (click)="onDeleteTypeMutation(tm)" class="clickable"> <mat-icon>delete_sweep</mat-icon></a> </td>
         </tr></table>
+    <div class="container">
+      <ul class="nav nav-pills">
+        <li [ngClass]="{'active' :i==currentPage}" *ngFor="let p of pages; let i=index">
+          <a class="clickable" (click)="gotopage(i)">{{i}}</a>
+        </li>
+      </ul>
+    </div>
     </div>
   </div>
