--- a/GestionUtilisateur-FrontEnd-master3/src/app/users/users.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/users/users.component.html
@@ -4,21 +4,22 @@
     <div class="panel-heading">Liste des utilisateurs</div>
   <div class="panel-body">
     <mat-form-field>
-      <input matInput placeholder="Login"  [(ngModel)]="motCle">
-    </mat-form-field>
+    <input matInput placeholder="Login" name="login" [(ngModel)]="motCle">
+  </mat-form-field>
     <button mat-icon-button (click)="chercherLogin()">
       <mat-icon >search</mat-icon>
       </button>
 <table class="table table-striped">
   <tr>
-    <th>Login</th><th>Mot de Passe</th><th>Date de Creation</th><th>Personnel</th><th>Modifier</th><th>Supprimer</th>
+    <th>ID</th><th>Login</th><th>Mot de Passe</th><th>Date de Creation</th><th>Personnel</th><th>Modifier</th><th>Supprimer</th>
   </tr>
   <tr *ngFor="let u of pageUsers?.content">
+    <td>{{u.idUser}}</td>
     <td>{{u.login}}</td>
     <td>{{u.motpasse}}</td>
     <td>{{u.datecreation}}</td>
     <td>{{u.personnel.prenom+" "+u.personnel.nom }}</td>
-    <td><a (click)="onEditUser(u.login)" class="clickable"><mat-icon >create</mat-icon></a> </td>
+    <td><a (click)="onEditUser(u.idUser)" class="clickable"><mat-icon >create</mat-icon></a> </td>
     <td><a (click)="onDeleteUser(u)" class="clickable"><mat-icon >delete</mat-icon></a> </td>
   </tr>
 
